syntax = "proto3";
package payment_v1;
import "google/protobuf/timestamp.proto";
import "commerce/v1/orderMessage.proto";

enum PaymentStatus {
  PENDING = 0;
  SUCCESS = 1;
  FAILED = 2;
}

message Payment {
  string id = 1;
  string code = 2;
  repeated commerce_v1.OrderItem items = 3;
  double totalPrice = 4;
  PaymentStatus status = 5;
  Provider provider = 6;
  string userId = 7;
}

enum ProviderMethod  {
  BANK = 0;
  CRYPTO_CURRENCY = 1;
  DEBIT = 2;
  CREDIT = 3;
  CASH_ON_DELIVERY = 4;
}

message Provider {
  string id = 1;
  string name = 2;
  Provider method = 3;
}

message CreatePayment {
  commerce_v1.OrderItem items = 1;
  string userId = 2;
  double amount = 3;
}

message CallBackPaymentRequest {
  string payment_id = 1;
  double amount = 2;
}

message FindPaymentByIdRequest {
  string id = 1;
}